Added pagination on endpoints returning multiple resources. Fixes #100
