# conf/swagger.json
@@ -166,6 +166,20 @@
                         "description": "Only commits with a valid(`true`)/unvalid(`false`) commmit-message will be returned.",
                         "required": false,
                         "type": "boolean"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "description": "Page number to be returned. Default = `1`."
+                    },
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "description": "Maximal number of `Commits` to return per page. Default = `50` and maximum = `500`."
                     }
                 ],
                 "responses": {
@@ -307,6 +321,20 @@
                         "description": "Return tickets registered until this commitId",
                         "required": false,
                         "type": "string"
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "description": "Page number to be returned. Default = `1`."
+                    },
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "required": false,
+                        "type": "integer",
+                        "description": "Maximal number of `Tickets` to return per page. Default = `50` and maximum = `500`."
                     }
                 ],
                 "responses": {
